# ofive

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.glass.config.mjs  playwright.perf.config.ts  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/benches/: query_workload_bench.rs  rebuild_index_bench.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_service.rs  architecture_guard.rs  backend_module_manifest.rs  frontend_log.rs  lib.rs  logging.rs  main.rs  module_boundary_template.rs  module_contribution.rs  platform_public_surface.rs  state.rs  vault_commands.rs  vault_config.rs  vault_fs.rs
src-tauri/src/ai_service/: settings.rs  sidecar.rs  stream.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/ai/: chat_app_service.rs  edit_rollback_app_service.rs  mcp_server_app_service.rs  mod.rs  module_contribution.rs  persistence_callback_app_service.rs  plugin_app_service.rs  settings_app_service.rs  tool_app_service.rs  tool_callback_app_service.rs  tool_cli_app_service.rs  toolbox_cli.rs
src-tauri/src/app/app_storage/: mod.rs  module_contribution.rs  storage_registry_app_service.rs  storage_registry_facade.rs
src-tauri/src/app/capability/: capability_app_service.rs  contribution.rs  execution_app_service.rs  mod.rs
src-tauri/src/app/persistence/: mod.rs  persistence_app_service.rs
src-tauri/src/app/project_reader/: capability_execution.rs  mod.rs  module_contribution.rs  project_reader_app_service.rs
src-tauri/src/app/semantic_index/: capability_execution.rs  index_app_service.rs  index_facade.rs  mod.rs  module_contribution.rs
src-tauri/src/app/sync/: mod.rs  module_contribution.rs
src-tauri/src/app/vault/: canvas_app_service.rs  (+9 more)
src-tauri/src/domain/: mod.rs
src-tauri/src/host/: bootstrap.rs  command_registry.rs  mod.rs  module_contribution.rs  window_effects.rs
src-tauri/src/infra/: mod.rs
src-tauri/src/runtime/: app_state.rs  runtime_context.rs
src-tauri/src/shared/: ai_service.rs  backend_plugin_contracts.rs  mod.rs  persistence_contracts.rs  project_reader_contracts.rs  semantic_index_contracts.rs  vault_contracts.rs
src-tauri/src/test_support/: mod.rs
src-tauri/src/vault_commands/: backlinks.rs  frontmatter_query.rs  fs_helpers.rs  graph.rs  markdown_ast.rs  outline.rs  query_index.rs  search.rs  segment.rs  types.rs  vault_ops.rs  wikilink.rs
src-tauri/tests/: ai_sidecar_grpc_integration.rs  backend_log_command_integration.rs  backend_log_notification_integration.rs  query_index_file_consistency_integration.rs  resolve_wikilink_target_integration.rs  segment_chinese_text_integration.rs  semantic_index_sqlite_vec_integration.rs  vault_canvas_document_integration.rs  vault_canvas_search_integration.rs  vault_consistency_integration.rs  vault_file_commands_integration.rs  vault_frontmatter_query_integration.rs  vault_graph_commands_integration.rs  vault_markdown_ast_integration.rs  vault_markdown_patch_integration.rs  vault_search_commands_integration.rs  vault_setup_config_integration.rs  vault_task_query_resource_integration.rs  wikilink_suggest_integration.rs
src-tauri/tests/support/: mod.rs
(+1043 files in other folders)
