[package]
name = "ofive"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ofive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"

[dependencies]
axum = { version = "0.7", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jieba-rs = "0.8.1"
base64 = "0.22"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
fastembed = "5.13.0"
sqlite-vec = "0.1.9"
pulldown-cmark = "0.9"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rmcp = { version = "1.2.0", features = [
    "server",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tonic = { version = "0.12", features = ["transport"] }
window-vibrancy = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
objc2 = "0.6"
raw-window-handle = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rebuild_index_bench"
harness = false

[[bench]]
name = "query_workload_bench"
harness = false
